# CS425Project

./: .gitignore  MyProject6.sln  MyProject6.uproject  ballMovement.uasset
Architecture/: Floor_400x400.uasset
Binaries/Win64/: UE4Editor.target
BuildRules/: MyProject6ModuleRulesSourceFiles.txt
Config/: DefaultEngine.ini  DefaultGame.ini
DesktopInterface/: CMakeLists.txt  DesktopInterface.cpp  DesktopInterface.h  QDataControlWidget.cpp  QDataControlWidget.h  QHomeWindow.cpp  QVRControlWidget.cpp  QVRControlWidget.h  main.cpp
MyProject6/Development/: Default.rc2.res
MyProject6/Development/Engine/: SharedPCH.Engine.cpp  SharedPCH.Engine.h
ProjectFiles/: MyProject6.vcxproj  MyProject6.vcxproj.filters
Saved/Autosaves/: PackageRestoreData.json
Saved/Backup/: StartupMap_2020-11-09-19-37-40.umap  StartupMap_2020-12-02-22-34-15.umap  StartupMap_2020-12-02-22-45-08.umap  StartupMap_2020-12-03-11-39-02.umap  StartupMap_2020-12-11-18-45-07.umap  StartupMap_BuiltData_2020-11-09-19-37-40.uasset  StartupMap_BuiltData_2020-12-02-22-34-16.uasset  ballMovement_2020-12-02-20-26-34.uasset  ballMovement_2020-12-02-20-51-09.uasset  ballMovement_2020-12-02-21-53-21.uasset  ballMovement_2020-12-02-22-54-22.uasset  saccadeDemo_2020-12-09-19-52-44.uasset  saccadeDemo_2020-12-09-19-58-00.uasset  saccadeDemo_2020-12-11-18-47-27.uasset
Saved/Config/Windows/: EditorPerProjectUserSettings.ini  Engine.ini
Source/: MyProject6.Target.cs  MyProject6Editor.Target.cs
Source/MyProject6/: MyProject6.Build.cs  MyProject6.cpp  ballMove.cpp  ballMove.h  movingBall.cpp  movingBall.h
(+17 files in other folders)
